# python-pydantic-sample

./: README.md  pyproject.toml
src/python_pydantic_sample/: invoice.py  main.py  user.py
