[project]
name = "python-pydantic-sample"
version = "0.1.0"
description = ""
authors = [
    {name = "abiwinanda",email = "abiwinanda@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email] (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "python_pydantic_sample", from = "src"}]

[tool.poetry.scripts]
project = "python_pydantic_sample.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
